--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
 - npm install
 - npm run build
 deploy:
-  provider: s3
+- provider: s3
   access_key_id: $AWS_ACCESS_KEY_ID
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: $S3_BUCKET
   local_dir: build
   skip_cleanup: true
   region: us-west-2
+
